[gd_scene load_steps=6 format=2]

[ext_resource path="res://Main.gd" type="Script" id=1]

[sub_resource type="PhysicsMaterial" id=4]
bounce = 0.3

[sub_resource type="LineShape2D" id=2]
normal = Vector2( 1, 0 )

[sub_resource type="LineShape2D" id=3]
normal = Vector2( -1, 0 )

[sub_resource type="LineShape2D" id=1]

[node name="Node" type="Node2D"]
script = ExtResource( 1 )

[node name="WaylandDisplay" type="WaylandDisplay" parent="."]
socket_name = "godot-0"

[node name="WlrBackend" type="WlrBackend" parent="WaylandDisplay"]

[node name="WlrOutput" type="WlrOutput" parent="WaylandDisplay/WlrBackend"]

[node name="WlrCompositor" type="WlrCompositor" parent="WaylandDisplay/WlrBackend"]

[node name="WlrXdgShell" type="WlrXdgShell" parent="WaylandDisplay"]

[node name="ViewportBounds" type="StaticBody2D" parent="."]
physics_material_override = SubResource( 4 )

[node name="Left" type="CollisionShape2D" parent="ViewportBounds"]
shape = SubResource( 2 )

[node name="Right" type="CollisionShape2D" parent="ViewportBounds"]
shape = SubResource( 3 )

[node name="Bottom" type="CollisionShape2D" parent="ViewportBounds"]
shape = SubResource( 1 )

[connection signal="ready" from="WaylandDisplay" to="." method="_on_WaylandDisplay_ready"]
[connection signal="new_surface" from="WaylandDisplay/WlrXdgShell" to="." method="_on_WlrXdgShell_new_surface"]
